feat: create refresh token table
